src/objects/History__c.object
<CustomObject>
    <fields>
        <fullName>Area_of_Expertise__c</fullName>
        <label>Area of Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>CNCS</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facilitator/Reviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Areas_of_Study_Degree_Details__c</fullName>
        <label>Area(s) of Study/Degree Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CollegeORUniversity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>College/University</label>
        <referenceTo>History__c</referenceTo>
        <relationshipLabel>History</relationshipLabel>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CollegeUniversity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>College/University</label>
        <referenceTo>IPEDS__c</referenceTo>
        <relationshipLabel>History</relationshipLabel>
        <relationshipName>History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>College_University__c</fullName>
        <inlineHelpText>CNCS staff uses the information in the following sections determine eligibilty to become a Review Participant, so be as comprehensive as possible.</inlineHelpText>
        <label>College/University</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currently_Enrolled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Enrolled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Degree_Earned__c</fullName>
        <label>Degree Earned</label>
        <picklist>
            <picklistValues>
                <fullName>Associate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachelor&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dummyfield__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dummyfield</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_Name__c</fullName>
        <label>Education Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experience_Type__c</fullName>
        <label>Experience Type</label>
        <picklist>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <label>Expertise</label>
        <picklist>
            <controllingField>Area_of_Expertise__c</controllingField>
            <picklistValues>
                <fullName>Collaborated or partnered with one or more service programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by a non-governmental organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service program funded by a state or local government agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed a service-learning program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participated in a service or service-learning program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Education &amp; Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After School Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (Higher Ed.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education (K-12)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elementary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faculty/teacher professional development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Work Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Start/School Preparedness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - Elementary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tutoring &amp; Child Literacy - Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clean Energy Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Restoration/Clean Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Conservation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waste Reduction/Management/Recycling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wildlife, Land, Vegetation Protection/Restoration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education_Legacy__c</fullName>
        <description>Field to migrate Legacy &quot;Highest Level of Education&quot; field values.</description>
        <label>Highest Level of Education</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <picklist>
            <picklistValues>
                <fullName>Less Than High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High School Diploma/GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical School/ Apprenticeship/ Vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associates Degree (AA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate Degree (e.g. MA, PhD, MD, JD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Organization_Type1__c</fullName>
        <description>Education</description>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Higher Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/Vocational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>City-Wide Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community-Based Nonprofit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-Based Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12: Elementary School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12:  High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12:  Middle School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State-Wide Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/Vocational</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_employee_experience_history__c</fullName>
        <label>Total employee experience history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Account__c</fullName>
        <label>User Account</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>History</relationshipLabel>
        <relationshipName>History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <inlineHelpText>Please specify the number of years of experience within the specified area of expertise</inlineHelpText>
        <label>Years of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>empFrom__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>empTo__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <label>History</label>
    <nameField>
        <displayFormat>ID-{000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History</pluralLabel>
    <recordTypes>
        <fullName>Education</fullName>
        <active>true</active>
        <description>Child to User Account/Contact</description>
        <label>Education</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employment</fullName>
        <active>true</active>
        <description>Child to User Account/Contact</description>
        <label>Employment</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Education_To_Required_on_Checkbox1</fullName>
        <active>true</active>
        <description>To date required if currently enrolled checkbox is not checked.</description>
        <errorConditionFormula>AND( RecordType.Name = &apos;Education&apos;,NOT(Currently_Enrolled__c), (ISBLANK(To__c)))</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>A To date is required if the Currently Enrolled checkbox is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Education_To_Required_on_Checkbox2</fullName>
        <active>true</active>
        <description>A &quot;To&quot; date cannot be entered if the &quot;Currently Enrolled&quot; checkbox is checked.</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;Education&apos;,Currently_Enrolled__c, NOT((ISBLANK(To__c))))</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>A To date cannot be entered if the Currently Enrolled checkbox is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Education_To_greater_than_Education_From</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name = &apos;Education&apos;,  NOT(Currently_Enrolled__c ),  To__c &lt;= From__c)</errorConditionFormula>
        <errorDisplayField>To__c</errorDisplayField>
        <errorMessage>To should be greater than From Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employmen_To_greater_than_Employmen_From</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name = &apos;Employment&apos;,  NOT(Currently_Employed__c ),  empTo__c &lt;= empFrom__c)</errorConditionFormula>
        <errorDisplayField>empTo__c</errorDisplayField>
        <errorMessage>To should be greater than From Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employment_To_Required_on_Checkbox1</fullName>
        <active>true</active>
        <description>To date required if currently enrolled checkbox is not checked.</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;Employment&apos;,NOT(Currently_Employed__c), (ISBLANK(empTo__c)))</errorConditionFormula>
        <errorDisplayField>empTo__c</errorDisplayField>
        <errorMessage>A To date is required if the Currently Employed checkbox is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Employment_To_Required_on_Checkbox2</fullName>
        <active>true</active>
        <description>A &quot;To&quot; date cannot be entered if the &quot;Currently Employed&quot; checkbox is checked.</description>
        <errorConditionFormula>AND(RecordType.Name = &apos;Employment&apos;,Currently_Employed__c, NOT((ISBLANK( empTo__c ))))</errorConditionFormula>
        <errorDisplayField>empTo__c</errorDisplayField>
        <errorMessage>A To date cannot be entered if the Currently Employed checkbox is checked.</errorMessage>
    </validationRules>
</CustomObject>